Config/localization fixes for new parts

--- a/GameData/NearFutureConstruction/Parts/Truss/truss-micro/truss-micro-1.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-micro/truss-micro-1.cfg
@@ -21,24 +21,24 @@ PART
 
 
 	TechRequired = advMetalworks
-	entryCost = 2000
-	cost = 400
+	entryCost = 10600
+	cost = 64
 	category = Structural
 	subcategory = 0
 	title = #LOC_NFConstruction_truss-micro-01_title
-	manufacturer = #LOC_NFConstruction_manufacturer_gigabloks_title
+	manufacturer = #autoLOC_501647 //#autoLOC_501647 = StrutCo
 	description = #LOC_NFConstruction_truss-micro-01_description
 	attachRules = 1,1,1,1,0
 
 	bulkheadProfiles = size0, srf
 
 	// --- standard part parameters ---
-	mass = 0.2
+	mass = 0.004
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
 	angularDrag = 1
-	crashTolerance = 80
+	crashTolerance = 12
 	breakingForce = 200
 	breakingTorque = 200
 	maxTemp = 2000
@@ -64,18 +64,18 @@ PART
 			name = Triangular
 			title = #LOC_NFConstruction_switcher_profile_triangular
 			transform = TrussTriLong
-			crashTolerance = 60
-			addedMass = -0.04
-			addedCost = -100
+
+			addedMass = -0.001
+			addedCost = -32
 		}
 		SUBTYPE
 		{
 			name = Planar
 			title = #LOC_NFConstruction_switcher_profile_planar
 			transform = TrussPlaneLong
-			crashTolerance = 60
-			addedMass = -0.04
-			addedCost = -100
+
+			addedMass = -0.002
+			addedCost = -48
 		}
 
 
