--- a/GameData/NearFutureConstruction/Parts/Truss/truss-micro/truss-micro-2.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-micro/truss-micro-2.cfg
@@ -20,25 +20,25 @@ PART
 	node_attach = 0, -0.2648, 0.0, 0.0, -1.0, 0.0, 0
 
 
-	TechRequired = advMetalworks
-	entryCost = 2000
-	cost = 400
+	TechRequired = precisionEngineering
+	entryCost = 7800
+	cost = 32
 	category = Structural
 	subcategory = 0
 	title = #LOC_NFConstruction_truss-micro-02_title
-	manufacturer = #LOC_NFConstruction_manufacturer_gigabloks_title
+	manufacturer = #autoLOC_501647 //#autoLOC_501647 = StrutCo
 	description = #LOC_NFConstruction_truss-micro-02_description
 	attachRules = 1,1,1,1,0
 
 	bulkheadProfiles = size0, srf
 
 	// --- standard part parameters ---
-	mass = 0.2
+	mass = 0.002
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
 	angularDrag = 1
-	crashTolerance = 80
+	crashTolerance = 12
 	breakingForce = 200
 	breakingTorque = 200
 	maxTemp = 2000
@@ -64,18 +64,16 @@ PART
 			name = Triangular
 			title = #LOC_NFConstruction_switcher_profile_triangular
 			transform = TrussTriMed
-			crashTolerance = 60
-			addedMass = -0.04
-			addedCost = -100
+			addedMass = -0.0005
+			addedCost = -16
 		}
 		SUBTYPE
 		{
 			name = Planar
 			title = #LOC_NFConstruction_switcher_profile_planar
 			transform = TrussPlaneMed
-			crashTolerance = 60
-			addedMass = -0.04
-			addedCost = -100
+			addedMass = -0.001
+			addedCost = -24
 		}
 
 
