--- a/GameData/NearFutureConstruction/Parts/Truss/truss-micro/truss-micro-adapter-1.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-micro/truss-micro-adapter-1.cfg
@@ -18,28 +18,25 @@ PART
 	node_stack_top01 = 0.0, 0.134, 0.0, 0.0, 1.0, 0.0, 0
 	node_stack_bottom01 = 0.0,-0.135, 0.0, 0.0, -1.0, 0.0, 0
 
-
-	TechRequired = advMetalworks
-	entryCost = 2000
-	cost = 400
+	TechRequired = precisionEngineering
+	entryCost = 7000
+	cost = 128
 	category = Structural
 	subcategory = 0
 	title = #LOC_NFConstruction_truss-micro-adapter-01_title
-	manufacturer = #LOC_NFConstruction_manufacturer_gigabloks_title
+	manufacturer = #autoLOC_501647 //#autoLOC_501647 = StrutCo
 	description = #LOC_NFConstruction_truss-micro-adapter-01_description
 	attachRules = 1,0,1,1,0
 
 	bulkheadProfiles = size0
 
 	// --- standard part parameters ---
-	mass = 0.2
+	mass = 0.005
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
 	angularDrag = 1
-	crashTolerance = 80
-	breakingForce = 200
-	breakingTorque = 200
+	crashTolerance = 12
 	maxTemp = 2000
 	thermalMassModifier = 0.4 // I am hollow
 
@@ -63,11 +60,10 @@ PART
 			name = Triangular
 			title = #LOC_NFConstruction_switcher_profile_triangular
 			transform = AdaptTri
-			crashTolerance = 60
-			addedMass = -0.04
-			addedCost = -100
+			addedMass = -0.001
+			addedCost = -32
 		}
-		
+
 
 	}
 }
