--- a/GameData/NearFutureConstruction/Patches/NFConstructionCRPTrusses.cfg
+++ b/GameData/NearFutureConstruction/Patches/NFConstructionCRPTrusses.cfg
@@ -112,15 +112,18 @@
 
 @PART[truss-octo-02]:NEEDS[CommunityResourcePack&CryoTanks]
 {
-
   MODULE
   {
     name =  ModuleCryoTank
-    FuelName = LqdHydrogen
-    // in % per hour
-    BoiloffRate = 0.05
     // in Ec per 1000 units per second
-    CoolingCost = 0.08
+    CoolingCost = 0.05
+    CoolingEnabled = True
+    BOILOFFCONFIG
+    {
+      FuelName = LqdHydrogen
+      // in % per hr
+      BoiloffRate = 0.05
+    }
   }
 }
 
@@ -199,7 +202,7 @@
       transform = HexLH2OTankMed
 			transform = MediumTruss
 			transform = HexLH2OTankMedFoil
-			
+
 			transform = COLLIDERMED
       addedCost = 1348
       crashTolerance = 50
@@ -237,14 +240,17 @@
 
 @PART[truss-hex-02]:NEEDS[CommunityResourcePack&CryoTanks]
 {
-
   MODULE
-  {
-    name =  ModuleCryoTank
-    FuelName = LqdHydrogen
-    // in % per hour
-    BoiloffRate = 0.05
-    // in Ec per 1000 units per second
-    CoolingCost = 0.08
+	{
+		name =  ModuleCryoTank
+		// in Ec per 1000 units per second
+		CoolingCost = 0.05
+		CoolingEnabled = True
+		BOILOFFCONFIG
+		{
+			FuelName = LqdHydrogen
+			// in % per hr
+			BoiloffRate = 0.05
+		}
   }
 }
