--- a/GameData/NearFutureConstruction/Patches/NFConstructionStockPartReplacements.cfg
+++ b/GameData/NearFutureConstruction/Patches/NFConstructionStockPartReplacements.cfg
@@ -4,6 +4,9 @@
 @PART[strutCube]:FOR[zzzzNFConstruction]
 {
 	@author = Chris Adderley
+	@title = #LOC_NFConstruction_truss-micro-03_title
+	@description = #LOC_NFConstruction_truss-micro-03_description
+	@tags = #LOC_NFConstruction_truss-micro-03_tags
 	!mesh = DELETE
 	!MODEL,* {}
 	MODEL
@@ -13,7 +16,7 @@
 		scale = 1,1,1
 		rotation = 0, 0, 0
 	}
-	
+
 	MODULE
 	{
 		name = ModuleB9PartSwitch
@@ -32,9 +35,8 @@
 			name = Triangular
 			title = #LOC_NFConstruction_switcher_profile_triangular
 			transform = TrussTriSmall
-			crashTolerance = 60
-			addedMass = -0.04
-			addedCost = -100
+			addedMass = -0.00025
+			addedCost = -8
 		}
 		SUBTYPE
 		{
@@ -42,8 +44,8 @@
 			title = #LOC_NFConstruction_switcher_profile_planar
 			transform = TrussPlaneSmall
 			crashTolerance = 60
-			addedMass = -0.04
-			addedCost = -100
+			addedMass = -0.0005
+			addedCost = -12
 		}
 
 
