--- a/GameData/NearFutureConstruction/Localization/en-us.cfg
+++ b/GameData/NearFutureConstruction/Localization/en-us.cfg
@@ -5,6 +5,7 @@ Localization
     // CONFIG
     // MANUFACTURERS
     #LOC_NFConstruction_manufacturer_gigabloks_title = Giga Bloks Construction Toys
+    #LOC_NFConstruction_manufacturer_clampdepot_title = Clamp Depot
 
     // SWITCHERS
     #LOC_NFConstruction_switcher_subtype_title = Subtype
@@ -189,19 +190,19 @@ Localization
     #LOC_NFConstruction_truss-circular-docking-01_tags = connect frame scaffold structur strut truss nearfuture annul berth capture connect couple dock fasten join moor socket hollow
 
     // Micro Truss
-    #LOC_NFConstruction_truss-micro-01_title =
-    #LOC_NFConstruction_truss-micro-01_description =
-    #LOC_NFConstruction_truss-micro-01_tags = connect frame scaffold structur strut truss plan tri squa cub nearfuture
-    #LOC_NFConstruction_truss-micro-02_title =
-    #LOC_NFConstruction_truss-micro-02_description =
-    #LOC_NFConstruction_truss-micro-02_tags = connect frame scaffold structur strut truss plan tri squa cub nearfuture
-    #LOC_NFConstruction_truss-micro-03_title =
-    #LOC_NFConstruction_truss-micro-03_description =
-    #LOC_NFConstruction_truss-micro-03_tags = connect frame scaffold structur strut truss plan tri squa cub nearfuture
+    #LOC_NFConstruction_truss-micro-01_title = Cubic-Family Large Strut
+    #LOC_NFConstruction_truss-micro-01_description = A large strut in the cubic family, with options for a square, triangular or planar profile.
+    #LOC_NFConstruction_truss-micro-01_tags = connect frame scaffold structur girder strut truss plan tri squa cub nearfuture
+    #LOC_NFConstruction_truss-micro-02_title = Cubic-Family Medium Strut
+    #LOC_NFConstruction_truss-micro-02_description = A medium strut in the cubic family, with options for a square, triangular or planar profile.
+    #LOC_NFConstruction_truss-micro-02_tags = connect frame scaffold structur girder strut truss plan tri squa cub nearfuture
+    #LOC_NFConstruction_truss-micro-03_title = Cubic-Family Strut
+    #LOC_NFConstruction_truss-micro-03_description = Now, with advances in technology, StrutCo brings you the Cubic Family Strut - it's like a regular Cubic Octagonal Strut, but in the shape of a cube! Also available in triangular and planar variants.
+    #LOC_NFConstruction_truss-micro-03_tags = connect frame scaffold structur girder strut truss plan tri squa cub nearfuture
 
-    #LOC_NFConstruction_truss-micro-adapter-01_title =
-    #LOC_NFConstruction_truss-micro-adapter-01_description =
-    #LOC_NFConstruction_truss-micro-adapter-01_tags = connect frame scaffold structur strut truss plan tri squa cub nearfuture
+    #LOC_NFConstruction_truss-micro-adapter-01_title = Cubic-Family Strut Adapter
+    #LOC_NFConstruction_truss-micro-adapter-01_description = Adapts the attractive triangular or square profile of the Cubic-Family strut to a standard 0.625m base.
+    #LOC_NFConstruction_truss-micro-adapter-01_tags = connect frame scaffold girder structur adapt strut truss tri squa cub nearfuture
 
     // adapters
     #LOC_NFConstruction_adapter-25-125_title = Rockomax Skeletal Structural Adapter
@@ -210,6 +211,10 @@ Localization
     #LOC_NFConstruction_adapter-25-multi-1_title = SE-4-OMNI Stack Multi-Adapter
     #LOC_NFConstruction_adapter-25-multi-1_description = This breakthrough in modularity allows for a 2.5m stack to be split to between 2 and 8 0.625m stacks. With a cookie on top.
     #LOC_NFConstruction_adapter-25-multi-1_tags = connect frame scaffold structur strut truss nearfuture adapter stack multi two four six eight ?2 ?4 ?6 ?8
+
+    #LOC_NFConstruction_adapter-125-0625-2_title = SM-1 Stack Adapter
+    #LOC_NFConstruction_adapter-125-0625-2_description = Converts a 1.25m stack into a single 0.625m mount.
+    #LOC_NFConstruction_adapter-125-0625-2_tags = connect frame scaffold structur strut truss nearfuture adapter stack multi single ?1
     #LOC_NFConstruction_adapter-125-0625-2_title = SM-2 Stack Dual Adapter
     #LOC_NFConstruction_adapter-125-0625-2_description = Converts a 1.25m stack into two 0.625m mounts, suitable for mounting all manner of small engines.
     #LOC_NFConstruction_adapter-125-0625-2_tags = connect frame scaffold structur strut truss nearfuture adapter stack multi dual ?2
@@ -232,6 +237,15 @@ Localization
     #LOC_NFConstruction_adapter-rad-125_title = S-MED Radial Stack Adapter
     #LOC_NFConstruction_adapter-rad-125_description = A radial stack adapter for 1.25m stacks. Studies show that this could increase the ease of building rockets by up to 16.2%.
     #LOC_NFConstruction_adapter-rad-125_tags = connect frame scaffold structur strut truss nearfuture adapt radial
+
+    //docking
+    #LOC_NFConstruction_docking-linear-1_title = Grip-O-Tron Linear Docking Connector
+    #LOC_NFConstruction_docking-linear-1_description = The grip-series docking connectors provide re-useable linear docking solutions for discerning customers concerned with efficient orbital assembly.
+    #LOC_NFConstruction_docking-linear-1_tags = connect nearfuture berth capture connect couple dock fasten join moor socket line
+
+    #LOC_NFConstruction_docking-linear-2_title = Grip-O-Tron XL Linear Docking Connector
+    #LOC_NFConstruction_docking-linear-2_description = The larger model of Grip-O-Tron provides a robust connection for linear orbital assembly. Warranty does not cover space travel.
+    #LOC_NFConstruction_docking-linear-2_tags = connect nearfuture berth capture connect couple dock fasten join moor socket line
 
   }
 }
