--- a/GameData/NearFutureConstruction/Localization/ru.cfg
+++ b/GameData/NearFutureConstruction/Localization/ru.cfg
@@ -1,4 +1,4 @@
-﻿// Not so draft translation v.0.2		(still no tags)
+﻿// Translation v.0.3 (no tags)
 // © Dr. Jet
 
 Localization
@@ -8,6 +8,7 @@ Localization
     // CONFIG
     // MANUFACTURERS
     #LOC_NFConstruction_manufacturer_gigabloks_title = Конструкторы «Гигаблокс»
+	#LOC_NFConstruction_manufacturer_clampdepot_title = Склад Хомутиков
 
     // SWITCHERS
     #LOC_NFConstruction_switcher_subtype_title = Подтип
@@ -38,7 +39,12 @@ Localization
     #LOC_NFConstruction_switcher_truss_variant4 = Двусторонняя
     #LOC_NFConstruction_switcher_truss_variant5 = Рамкой
 
-    #LOC_NFConstruction_switcher_endcap_title1 = Верхняя заглушка
+    #LOC_NFConstruction_switcher_profile_title = Профиль
+    #LOC_NFConstruction_switcher_profile_square = Прямоугольный
+    #LOC_NFConstruction_switcher_profile_triangular = Треугольный
+    #LOC_NFConstruction_switcher_profile_planar = Плоский
+	
+	#LOC_NFConstruction_switcher_endcap_title1 = Верхняя заглушка
     #LOC_NFConstruction_switcher_endcap_title2 = Нижняя заглушка
     #LOC_NFConstruction_switcher_endcap_variant1 = Стандарт
     #LOC_NFConstruction_switcher_endcap_variant2 = Сплошная
@@ -64,6 +70,12 @@ Localization
     #LOC_NFConstruction_switcher_multiadapter_variant2 = Четыре
     #LOC_NFConstruction_switcher_multiadapter_variant3 = Шесть
     #LOC_NFConstruction_switcher_multiadapter_variant4 = Восемь
+	
+	#LOC_NFConstruction_switcher_endcaps_name = Заглушка
+    #LOC_NFConstruction_switcher_endcaps_black = Классический (без ручек)
+    #LOC_NFConstruction_switcher_endcaps_black_handles = Классический
+    #LOC_NFConstruction_switcher_endcaps_white = Изолированный (без ручек)
+    #LOC_NFConstruction_switcher_endcaps_white_handles = Изолированный
 
     // PARTS
     // Hex Girder
@@ -180,6 +192,21 @@ Localization
     #LOC_NFConstruction_truss-circular-docking-01_description = Высокопрочный стыковочный узел значительного размера. Пустотелый!
     #LOC_NFConstruction_truss-circular-docking-01_tags = connect frame scaffold structur strut truss nearfuture annul berth capture connect couple dock fasten join moor socket hollow
 
+	// Micro Truss
+    #LOC_NFConstruction_truss-micro-01_title = Кубическая стойка (большая)
+    #LOC_NFConstruction_truss-micro-01_description = Большая стойка из кубического семейства, с возможностями прямоугольного, треугольного или плоского профиля.
+    #LOC_NFConstruction_truss-micro-01_tags = connect frame scaffold structur girder strut truss plan tri squa cub nearfuture
+    #LOC_NFConstruction_truss-micro-02_title = Кубическая стойка (средняя)
+    #LOC_NFConstruction_truss-micro-02_description = Большая стойка из кубического семейства, с возможностями прямоугольного, треугольного или плоского профиля.
+    #LOC_NFConstruction_truss-micro-02_tags = connect frame scaffold structur girder strut truss plan tri squa cub nearfuture
+    #LOC_NFConstruction_truss-micro-03_title = Кубическая стойка
+    #LOC_NFConstruction_truss-micro-03_description = Теперь, с улучшенными технологиями, фирма «СтойКО» представляет вам семейство кубических стоек - они как обычная Кубическая восьмиугольная стойка, но в форме куба! Также доступны в треугольном и плоском варианте.
+    #LOC_NFConstruction_truss-micro-03_tags = connect frame scaffold structur girder strut truss plan tri squa cub nearfuture
+
+    #LOC_NFConstruction_truss-micro-adapter-01_title = Адаптер кубической стойки
+    #LOC_NFConstruction_truss-micro-adapter-01_description = Адаптирует привлекательный треугольный или прямоугольный профиль стоек кубического семейства к стандартной базе 0,625 м.
+    #LOC_NFConstruction_truss-micro-adapter-01_tags = connect frame scaffold girder structur adapt strut truss tri squa cub nearfuture
+
     // adapters
     #LOC_NFConstruction_adapter-25-125_title = Скелетный структурный адаптер «Рокомакс»
     #LOC_NFConstruction_adapter-25-125_description = Простейший адаптер от «Рокомакс», поддерживающий репутацию компании в вопросах качества уценённых товаров.
@@ -187,7 +214,11 @@ Localization
     #LOC_NFConstruction_adapter-25-multi-1_title =  Продольный мульти-адаптер SE-4-OMNI
     #LOC_NFConstruction_adapter-25-multi-1_description = Этот прорыв в модульности позволяет посоединять к детали диаметром 2,5 м от 2 до 8 деталей диаметром 0,625 м. И печенька сверху.
     #LOC_NFConstruction_adapter-25-multi-1_tags = connect frame scaffold structur strut truss nearfuture adapter stack multi two four six eight ?2 ?4 ?6 ?8
-    #LOC_NFConstruction_adapter-125-0625-2_title = Двойной адаптер SM-2 
+    
+	#LOC_NFConstruction_adapter-125-0625-1_title = Одинарный адаптер SM-1
+    #LOC_NFConstruction_adapter-125-0625-1_description = Позволяет посоединять к детали диаметром 1,25 м деталь диаметром 0,625 м.
+    #LOC_NFConstruction_adapter-125-0625-1_tags = connect frame scaffold structur strut truss nearfuture adapter stack multi single ?1
+	#LOC_NFConstruction_adapter-125-0625-2_title = Двойной адаптер SM-2 
     #LOC_NFConstruction_adapter-125-0625-2_description = Позволяет посоединять к детали диаметром 1,25 м две детали диаметром 0,625 м. Подходит для монтажа любых небольших двигателей.
     #LOC_NFConstruction_adapter-125-0625-2_tags = connect frame scaffold structur strut truss nearfuture adapter stack multi dual ?2
     #LOC_NFConstruction_adapter-125-0625-3_title = Тройной адаптер SM-3
@@ -199,14 +230,25 @@ Localization
     #LOC_NFConstruction_adapter-375-25-1_title = Большой скелетный структурный адаптер «Рокомакс»
     #LOC_NFConstruction_adapter-375-25-1_description = Первая попытка «Рокомакс» в спешке войти на рынок сверхбольших комплектующих, где доминирует «Кербодайн», была встречена сдержанными аплодисментами.
     #LOC_NFConstruction_adapter-375-25-1_tags = connect frame scaffold structur strut truss nearfuture
+	LOC_NFConstruction_adapter-375-25-2_title = Скелетный структурный адаптер «Кербодайн»
+    #LOC_NFConstruction_adapter-375-25-2_description = 
+    #LOC_NFConstruction_adapter-375-25-2_tags = connect frame scaffold adapt structur strut truss nearfuture
 
-
-    #LOC_NFConstruction_adapter-rad-0625_title = Радиально-продольный адаптер (малый)
+    #LOC_NFConstruction_adapter-rad-0625_title = Радиально-продольный адаптер S-MINI
     #LOC_NFConstruction_adapter-rad-0625_description = Очароватеьный крошечный радиально-продольный адаптер для деталей диаметром 0,625 м. Теперь нам не нужно использовать для этого здоровенные баки, полные взрывоопасного топлива. Беспроигрышный вариант!
     #LOC_NFConstruction_adapter-rad-0625_tags = connect frame scaffold structur strut truss nearfuture radial
-    #LOC_NFConstruction_adapter-rad-125_title = Радиально-продольный адаптер (средний)
+    #LOC_NFConstruction_adapter-rad-125_title = Радиально-продольный адаптер S-MED
     #LOC_NFConstruction_adapter-rad-125_description = Радиально-продольный адаптер для деталей диаметром 1,25 м. Исследования показали, что он может упростить сборку ракет на 16.2%.
     #LOC_NFConstruction_adapter-rad-125_tags = connect frame scaffold structur strut truss nearfuture radial
+
+	//docking
+    #LOC_NFConstruction_docking-linear-1_title = Линейный стыковочный узел «Хват-о-трон»
+    #LOC_NFConstruction_docking-linear-1_description = Стыковочные узлы «Хват-о-трон» предоставляют многоразовое решение линейной стыковки для разборчивых покупателей, озабоченных эффективностью орбитальной сборки.
+    #LOC_NFConstruction_docking-linear-1_tags = connect nearfuture berth capture connect couple dock fasten join moor socket line
+
+    #LOC_NFConstruction_docking-linear-2_title = Большой линейный стыковочный узел «Хват-о-трон» 
+    #LOC_NFConstruction_docking-linear-2_description = Увеличенная модель «Хват-о-трон»-а обеспечивает надёжное соединение для линейной орбитальной сборки. На космические путешествия гарантия не распространяется.
+    #LOC_NFConstruction_docking-linear-2_tags = connect nearfuture berth capture connect couple dock fasten join moor socket line
 
   }
 }
