--- a/GameData/NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-01.cfg
@@ -15,9 +15,9 @@ PART
 	}
 	rescaleFactor = 1
 
-	node_stack_top01 = 0.0, 3.7497899, 0.0, 0.0, 1.0, 0.0, 3
+	node_stack_top01 = 0.0, 3.7473, 0.0, 0.0, 1.0, 0.0, 3
 	node_stack_top02 = 0.0, 3.659, 0.0, 0.0, -1.0, 0.0, 2
-	node_stack_bottom01 = 0.0, -3.749789, 0.0, 0.0, -1.0, 0.0,3
+	node_stack_bottom01 = 0.0, -3.7309, 0.0, 0.0, -1.0, 0.0,3
 	node_stack_bottom02 = 0.0, -3.659, 0.0, 0.0, 1.0, 0.0,2
 	node_attach = -1.332,0.0, 0.0, 1.0, 0.0, 0.0, 3
 
