--- a/GameData/NearFutureConstruction/Localization/en-us.cfg
+++ b/GameData/NearFutureConstruction/Localization/en-us.cfg
@@ -39,7 +39,7 @@ Localization
     #LOC_NFConstruction_switcher_profile_title = Profile
     #LOC_NFConstruction_switcher_profile_square = Square
     #LOC_NFConstruction_switcher_profile_triangular = Triangular
-    #LOC_NFConstruction_switcher_profile_planar = Triangular
+    #LOC_NFConstruction_switcher_profile_planar = Planar
 
     #LOC_NFConstruction_switcher_endcap_title1 = Upper Cap
     #LOC_NFConstruction_switcher_endcap_title2 = Lower Cap
