Fix for B9PS issue, version bump

--- a/GameData/NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-01.cfg
+++ b/GameData/NearFutureConstruction/Parts/Truss/truss-spinal/truss-spinal-01.cfg
@@ -124,7 +124,7 @@ PART
 
 		SUBTYPE
 		{
-			name =
+			name = Basic
 title = #LOC_NFConstruction_switcher_endcap_variant1
 
 			transform = TRUSSTOP
@@ -135,7 +135,7 @@ title = #LOC_NFConstruction_switcher_endcap_variant1
 		}
 		SUBTYPE
 		{
-			name =
+			name = Solid
 			title = #LOC_NFConstruction_switcher_endcap_variant2
 			node = top02
 			transform = TRUSSTOPSOLID
@@ -145,7 +145,7 @@ title = #LOC_NFConstruction_switcher_endcap_variant1
 		}
 		SUBTYPE
 		{
-			name =
+			name = None
 			title = #LOC_NFConstruction_switcher_endcap_variant3
 			transform = TRUSSTOPFRAME
 			addedMass = -0.01
