Updates and improvements

--- a/GameData/NearFutureConstruction/Patches/NFConstructionCRPTrusses.cfg
+++ b/GameData/NearFutureConstruction/Patches/NFConstructionCRPTrusses.cfg
@@ -54,9 +54,13 @@
   MODULE
 	{
 		name =  ModuleCryoTank
-		FuelName = LqdHydrogen
-		// in % per hour
-		BoiloffRate = 0.05
+		CoolingEnabled = True
+    BOILOFFCONFIG
+    {
+      FuelName = LqdHydrogen
+      // in % per hr
+      BoiloffRate = 0.05
+    }
 		// in Ec per 1000 units per second
 		CoolingCost = 0.08
 	}
@@ -181,9 +185,13 @@
   MODULE
   {
     name =  ModuleCryoTank
-    FuelName = LqdHydrogen
-    // in % per hour
-    BoiloffRate = 0.05
+    CoolingEnabled = True
+    BOILOFFCONFIG
+    {
+      FuelName = LqdHydrogen
+      // in % per hr
+      BoiloffRate = 0.05
+    }
     // in Ec per 1000 units per second
     CoolingCost = 0.08
   }
