--- a/GameData/NearFutureConstruction/Localization/en-us.cfg
+++ b/GameData/NearFutureConstruction/Localization/en-us.cfg
@@ -135,7 +135,7 @@ Localization
     #LOC_NFConstruction_truss-octo-hub-crew-1_tags = connect frame scaffold structur strut truss nearfuture octo center central hub nexus crew pressur
     #LOC_NFConstruction_truss-octo-drone-1_title = Octo-Girder Guidance Unit
     #LOC_NFConstruction_truss-octo-drone-1_description = Remotely operated guidance unit with the most advanced algorithms. Also incorporates a large, powerful set of reaction wheels suitable for moving large spacecraft.
-    #LOC_NFConstruction_truss-octo-drone-1_tags = cmg command control (core fly gyro moment probe react sas satellite space stab steer torque connect frame scaffold structur strut truss
+    #LOC_NFConstruction_truss-octo-drone-1_tags = cmg command control (core fly gyro moment probe react sas satellite space stab steer torque connect frame scaffold structur strut truss nearfuture
     #LOC_NFConstruction_truss-octo-docking-25_title = Octo-Girder Heavy Docking Connector
     #LOC_NFConstruction_truss-octo-docking-25_description = A heavier Modular Octo-Girder docking port. Compatible with the larger standard Clamp-O-Tron Senior docking port.
     #LOC_NFConstruction_truss-octo-docking-25_tags = connect frame scaffold structur strut truss nearfuture octo berth capture connect couple dock fasten join moor socket
