--- a/GameData/NearFutureConstruction/Parts/Adapters/adapter-25/adapter-25-125.cfg
+++ b/GameData/NearFutureConstruction/Parts/Adapters/adapter-25/adapter-25-125.cfg
@@ -26,7 +26,7 @@ PART
 	category = Structural
 	subcategory = 0
 	title = #LOC_NFConstruction_adapter-25-125_title
-	manufacturer = Rockomax Conglomerate
+	manufacturer = #autoLOC_501637 // #autoLOC_501637 = Rockomax Conglomerate
 	description = #LOC_NFConstruction_adapter-25-125_description
 
 	attachRules = 1,0,1,1,0
