--- a/GameData/NearFutureConstruction/Parts/Adapters/adapter-25/adapter-25-multi-1.cfg
+++ b/GameData/NearFutureConstruction/Parts/Adapters/adapter-25/adapter-25-multi-1.cfg
@@ -44,7 +44,7 @@ PART {
 	category = Structural
 	subcategory = 0
 	title = #LOC_NFConstruction_adapter-25-multi-1_title
-	manufacturer = O.M.B. Demolition Enterprises
+	manufacturer = #autoLOC_501629 // #autoLOC_501629 = O.M.B. Demolition Enterprises
 	description = #LOC_NFConstruction_adapter-25-multi-1_description
 
 	attachRules = 1,0,1,1,0
