--- a/GameData/NearFutureConstruction/Parts/Adapters/adapter-125/adapter-125-0625-1.cfg
+++ b/GameData/NearFutureConstruction/Parts/Adapters/adapter-125/adapter-125-0625-1.cfg
@@ -27,7 +27,7 @@ PART {
 	category = Structural
 	subcategory = 0
 	title = #LOC_NFConstruction_adapter-125-0625-1_title
-	manufacturer = O.M.B. Demolition Enterprises
+	manufacturer = #autoLOC_501629 // #autoLOC_501629 = O.M.B. Demolition Enterprises
 	description =  #LOC_NFConstruction_adapter-125-0625-1_description
 
 	// allowSrfAttach, allowCollision
