--- a/GameData/NearFutureConstruction/Parts/Adapters/adapter-125/adapter-125-0625-4.cfg
+++ b/GameData/NearFutureConstruction/Parts/Adapters/adapter-125/adapter-125-0625-4.cfg
@@ -30,8 +30,8 @@ PART {
 	category = Structural
 	subcategory = 0
 	title = #LOC_NFConstruction_adapter-125-0625-4_title
-	manufacturer = O.M.B. Demolition Enterprises
-	description =  #LOC_NFConstruction_adapter-125-0625-4_description
+	manufacturer = #autoLOC_501629 // #autoLOC_501629 = O.M.B. Demolition Enterprises
+	description = #LOC_NFConstruction_adapter-125-0625-4_description
 
 	allowSrfAttach, allowCollision
 	attachRules = 1,0,1,1,0
