--- a/GameData/NearFutureConstruction/Parts/Adapters/adapter-375/adapter-375-25-1.cfg
+++ b/GameData/NearFutureConstruction/Parts/Adapters/adapter-375/adapter-375-25-1.cfg
@@ -27,7 +27,7 @@ PART
 	category = Structural
 	subcategory = 0
 	title = #LOC_NFConstruction_adapter-375-25-1_title
-	manufacturer = Rockomax Conglomerate
+	manufacturer = #autoLOC_501637 // #autoLOC_501637 = Rockomax Conglomerate
 	description = #LOC_NFConstruction_adapter-375-25-1_description
 
 	attachRules = 1,0,1,1,0
