--- a/GameData/NearFutureConstruction/Parts/Adapters/adapter-radial/adapter-rad-0625.cfg
+++ b/GameData/NearFutureConstruction/Parts/Adapters/adapter-radial/adapter-rad-0625.cfg
@@ -31,7 +31,7 @@ PART
 	category = Structural
 	subcategory = 0
 	title = #LOC_NFConstruction_adapter-rad-0625_title
-	manufacturer = O.M.B. Demolition Enterprises
+	manufacturer = #autoLOC_501629 // #autoLOC_501629 = O.M.B. Demolition Enterprises
 	description = #LOC_NFConstruction_adapter-rad-0625_description
 	attachRules = 1,1,1,1,1
 
