--- a/GameData/NearFutureConstruction/Parts/Adapters/adapter-radial/adapter-rad-125.cfg
+++ b/GameData/NearFutureConstruction/Parts/Adapters/adapter-radial/adapter-rad-125.cfg
@@ -30,8 +30,8 @@ PART
 	category = Structural
 	subcategory = 0
 	title = #LOC_NFConstruction_adapter-rad-125_title
-	manufacturer = O.M.B. Demolition Enterprises
-	description =  #LOC_NFConstruction_adapter-rad-125_description
+	manufacturer = #autoLOC_501629 // #autoLOC_501629 = O.M.B. Demolition Enterprises
+	description = #LOC_NFConstruction_adapter-rad-125_description
 	attachRules = 1,1,1,1,1
 
 	mass = 0.045
